--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sleek UI with Swiping</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+    <title>White Noise Alarm</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/swiper.css">
     <link rel="stylesheet" href="static/styles.css">
@@ -95,7 +98,7 @@
     </span>
 </div>
 <div class="container">
-<form method="POST">
+<form method="GET" action="/set_alarm">
     <input type="hidden" name="i_time" id="i_time" value="">
     <button class="cool-button" id="submitTime">Submit Time</button>
 </form>
